k8s/backendDotNetEntity/manifests/greeting-backend-dotnet.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-backend-dotnet
  labels:
    app: greeting-backend-dotnet
    app.kubernetes.io/name: greeting-backend-dotnet
    app.kubernetes.io/part-of: greeting-app
    app.kubernetes.io/component: backend
    app.kubernetes.io/runtime: dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting-backend-dotnet
      app.kubernetes.io/name: greeting-backend-dotnet
      app.kubernetes.io/part-of: greeting-app
  template:
    metadata:
      labels:
        app: greeting-backend-dotnet
        app.kubernetes.io/name: greeting-backend-dotnet
        app.kubernetes.io/part-of: greeting-app
        app.kubernetes.io/component: backend
        app.kubernetes.io/runtime: dotnet
    spec:
      containers:
        - name: greeting-backend-dotnet
          image: image-registry.apps.silver.devops.gov.bc.ca/5b7aa5-dev/greeting-backend-dotnet:latest
          ports:
            - containerPort: 3010
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
